--- a/styles/global.css
+++ b/styles/global.css
@@ -34,5 +34,12 @@ img {
 }
 
 button {
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
   font: inherit;
+  color: inherit;
+  line-height: normal;
+  cursor: pointer;
 }
