minor bug fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  max-height: 293px;
   padding: 92px 50px 92px 50px;
   font-size: 18px;
 }
@@ -76,7 +75,6 @@
 }
 
 .title-text {
-  z-index: 2;
   display: block;
   margin-bottom: 20px;
 }
@@ -118,8 +116,8 @@
   border: solid 1px #fff;
   font-size: 22px;
   text-transform: uppercase;
+  cursor: pointer;
 }
-
 
 .lots {
   padding: 180px 24px 120px;
@@ -144,12 +142,13 @@
   display: flex;
   flex-direction: column;
   width: 334px;
-  height: 596px;
+  min-height: 596px;
   list-style: none;
 }
 
 .card-link {
   height: 100%;
+  text-decoration: none;
 }
 
 .card {
@@ -159,7 +158,7 @@
   justify-content: space-between;
   height: 100%;
   padding: 48px 40px;
-  color:#fff;
+  color: #fff;
   background-position: center;
   background-size: cover;
 }
@@ -266,12 +265,9 @@
   text-decoration: none;
 }
 
-.footer__social {
-  justify-self: center;
-}
-
 .footer__social-list {
   display: flex;
+  justify-self: center;
   gap: 48px;
   list-style: none;
 }
